crates/rome_formatter/tests/specs/prettier/tuple/tuple-trailing-comma.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: tuple-trailing-comma.js

---
# Input
```js
#[1,]

```

# Output
```js
#[1,]

```

# Errors
```
error: expected `!` following a `#`, but found none
  ┌─ tuple-trailing-comma.js:1:1
  │
1 │ #[1,]
  │ ^

error[SyntaxError]: expected a statement but instead found '#[1,]'
  ┌─ tuple-trailing-comma.js:1:1
  │
1 │ #[1,]
  │ ^^^^^ Expected a statement here


```


